--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,6 +14,14 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        externalNativeBuild {
+            cmake {
+                arguments '-DANDROID_STL=c++_static'
+            }
+        }
+        ndk{
+            abiFilters 'armeabi-v7a'
+        }
     }
 
     buildTypes {
@@ -32,6 +40,7 @@ android {
             version '3.22.1'
         }
     }
+
     buildFeatures {
         viewBinding true
     }
