--- a/app/src/main/cpp/CMakeLists.txt
+++ b/app/src/main/cpp/CMakeLists.txt
@@ -14,7 +14,9 @@ set(jnilibs ${CMAKE_SOURCE_DIR}/jniLibs)
 
 add_library(${CMAKE_PROJECT_NAME}
         SHARED
-        native-lib.cpp)
+        #        ${src-files}
+        native-lib.cpp
+        )
 
 link_directories(
         ${CMAKE_CURRENT_LIST_DIR}/libs/${ANDROID_ABI})
@@ -26,11 +28,13 @@ target_include_directories(${CMAKE_PROJECT_NAME} PRIVATE
         ${distribution_DIR}/include)
 
 file(GLOB src-files
-        ${CMAKE_SOURCE_DIR}/*.cpp
+        ${CMAKE_SOURCE_DIR}/native-lib.cpp
+        #        ${CMAKE_SOURCE_DIR}/MNQueue.cpp
+
         )
 
 set(third-party-libs
-        #        ${jnilibs}/${ANDROID_ABI}/libgperf.so
+        ${jnilibs}/${ANDROID_ABI}/libgperf.so
         ${jnilibs}/${ANDROID_ABI}/libavcodec.so
         ${jnilibs}/${ANDROID_ABI}/libavdevice.so
         ${jnilibs}/${ANDROID_ABI}/libavformat.so
