FFmpeg：音频的编解码

--- a/app/src/main/cpp/CMakeLists.txt
+++ b/app/src/main/cpp/CMakeLists.txt
@@ -18,6 +18,7 @@ add_library(${CMAKE_PROJECT_NAME}
         FFmpegManger.cpp
         FFmpegVideoTrans.cpp
         FFmpegWaterMark.cpp
+        FFmpegPlayAudio.cpp
         )
 
 link_directories(
