FFmpeg：MP4加水印为什么过滤器会连接失败？

--- a/app/src/main/cpp/CMakeLists.txt
+++ b/app/src/main/cpp/CMakeLists.txt
@@ -19,6 +19,7 @@ add_library(${CMAKE_PROJECT_NAME}
         FFmpegVideoTrans.cpp
         FFmpegWaterMark.cpp
         FFmpegPlayAudio.cpp
+        FFmpegWaterMarkTest.cpp
         )
 
 link_directories(
