添加ffmpeg-6.1.1\ffmpeg-6.1.1\tests\api中的例子程序

--- a/app/src/main/cpp/CMakeLists.txt
+++ b/app/src/main/cpp/CMakeLists.txt
@@ -21,6 +21,14 @@ add_library(${CMAKE_PROJECT_NAME}
         FFmpegPlayAudio.cpp
         FFmpegWaterMarkTest.cpp
         FFmpegVideoPlay.cpp
+
+
+        ffmpegsrc/api-band-test.c
+        ffmpegsrc/api-threadmessage-test.c
+        ffmpegsrc/api-seek-test.c
+        ffmpegsrc/api-flac-test.c
+        ffmpegsrc/api-h264-slice-test.c
+        ffmpegsrc/api-h264-test.c
         )
 
 link_directories(
