--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,12 +4,13 @@ plugins {
 
 android {
     namespace 'com.example.myyffmpeg'
-    compileSdk 33
+    compileSdk 34
 
     defaultConfig {
         applicationId "com.example.myyffmpeg"
         minSdk 26
-        targetSdk 28
+        //noinspection EditedTargetSdkVersion
+        targetSdk 33
         versionCode 1
         versionName "1.0"
 
@@ -22,7 +23,7 @@ android {
                 cppFlags "-std=c++11 -frtti -fexceptions"
             }
         }
-        ndk{
+        ndk {
             abiFilters 'armeabi-v7a'
         }
     }
@@ -50,11 +51,12 @@ android {
 }
 
 dependencies {
-
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.8.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    implementation project(':rtmplive')
+
 }
