--- a/rtmplive/build.gradle
+++ b/rtmplive/build.gradle
@@ -11,6 +11,15 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
+
+        externalNativeBuild {
+            cmake {
+                cppFlags ""
+            }
+        }
+        ndk{
+            abiFilters "armeabi-v7a"
+        }
     }
 
     buildTypes {
