从相机获取YUV数据到native，在x264下转成H264

--- a/rtmplive/src/main/cpp/CMakeLists.txt
+++ b/rtmplive/src/main/cpp/CMakeLists.txt
@@ -36,6 +36,7 @@ add_library(
         rtmplivelib.cpp
         RtmpPusherManger.cpp
         RtmpInit.cpp
+        VideoStreamPacket.cpp
 )
 
 link_directories(
