OpenGL相机操作：OpenglesCameraPre.cpp操作类

--- a/app/src/main/cpp/CMakeLists.txt
+++ b/app/src/main/cpp/CMakeLists.txt
@@ -27,6 +27,7 @@ add_library(${CMAKE_PROJECT_NAME}
         opengl/OpenGLCamera3D.cpp
         opengl/OpenglesFlashLight.cpp
         opengl/OpenGLStdImage.cpp
+        opengl/OpenglesCameraPre.cpp
 
         ffmpegsrc/api-band-test.c
         ffmpegsrc/api-threadmessage-test.c
