G滤镜：创建OpenglesTextureFilterRender继承OpenglesTexureVideoRender准备沿用父类的函数代码

--- a/glplay/src/main/cpp/CMakeLists.txt
+++ b/glplay/src/main/cpp/CMakeLists.txt
@@ -22,7 +22,7 @@ add_library(
         opengl/OpenglesCameraPre.cpp
         opengl/GLCommonUtils.cpp
         opengl/OpenglesTexureVideoRender.cpp
-        opengl/GLUtils.cpp
+        opengl/OpenglesTextureFilterRender.cpp
 
 
 )
