Gl SurfaceView显示视频:前置1

--- a/glplay/src/main/cpp/CMakeLists.txt
+++ b/glplay/src/main/cpp/CMakeLists.txt
@@ -23,6 +23,7 @@ add_library(
         opengl/GLCommonUtils.cpp
         opengl/OpenglesTexureVideoRender.cpp
         opengl/OpenglesTextureFilterRender.cpp
+        opengl/OpenglesSurfaceViewVideoRender.cpp
 
 
 )
