--- a/glplay/src/main/cpp/CMakeLists.txt
+++ b/glplay/src/main/cpp/CMakeLists.txt
@@ -32,6 +32,9 @@ add_library(
         WyyEGL/EglSurfaceBase.cpp
         WyyEGL/WindowSurface.cpp
 
+        looper/GLRenderLooper.cpp
+        looper/Looper.cpp
+
 
 )
 
