GL视频添加纹理图片及文字文本：前置

--- a/glplay/src/main/cpp/CMakeLists.txt
+++ b/glplay/src/main/cpp/CMakeLists.txt
@@ -27,6 +27,7 @@ add_library(
         opengl/OpenglesTextureFilterRender.cpp
         opengl/OpenglesSurfaceViewVideoRender.cpp
         opengl/EGLSurfaceViewVideoRender.cpp
+        opengl/GLDrawTextVideoRender.cpp
 
         WyyEGL/EglCore.cpp
         WyyEGL/EglSurfaceBase.cpp
