GL使用帧缓冲FBO在视频中绘制文本并录制:帧缓冲后期处理从https://github.com/wangyongyao1989/AndroidLearnOpenGL引入

--- a/glplay/src/main/cpp/CMakeLists.txt
+++ b/glplay/src/main/cpp/CMakeLists.txt
@@ -44,6 +44,7 @@ add_library(
         opengl/EGLSurfaceViewVideoRender.cpp
         opengl/GLDrawTextVideoRender.cpp
         opengl/GLFboDrawTextVideoRender.cpp
+        opengl/GLFBOPostProcessing.cpp
 
         WyyEGL/EglCore.cpp
         WyyEGL/EglSurfaceBase.cpp
